# guidedPartitioner

./: CMakeLists.txt  README.md  dump_partitions.py  extract_interlaced.py  fasta_to_fastq.py  genes_indexing.cpp  genes_indexing.py  linear_dump_partitions.py  reads_partitioner.cpp  serialize_fasta.py
includes/: readClassifier.hpp
slurm_jobs/: README.md  assembly_genesPartitions.sh  dumping_sbatch.sh  indexing_sbatch.sh  job_rawReads_rnaQuast.sh  partitioning_sbatch.sh  postAssembly_genePartitions.sh  reps_genePartitions_rnaQuast.sh  wholeData_assembly_plass.sh
